# github-actions-demo

./: .actrc  BRANCH_PROTECTION.md  Cargo.toml  deny.toml  devbox.json
.github/workflows/: call-reusable.yml  ci.yml  docker-build.yml  integration-tests.yml  manual-approval-gate.yml  manual-deploy.yml  pr-validation.yml  publish.yml  reusable-rust-ci.yml
src/: config.rs  error.rs  formatting.rs  handler.rs  lib.rs  main.rs  metrics.rs  model.rs  pagination.rs  slow_tests.rs  store.rs  validation.rs
